chore: Update cloudflared dns name to be more explicit

--- a/templates/config/kubernetes/apps/network/external/cloudflared/dnsendpoint.yaml.j2
+++ b/templates/config/kubernetes/apps/network/external/cloudflared/dnsendpoint.yaml.j2
@@ -6,6 +6,6 @@ metadata:
   name: cloudflared
 spec:
   endpoints:
-    - dnsName: "external.${SECRET_DOMAIN}"
+    - dnsName: "vrtx.${SECRET_DOMAIN}"
       recordType: CNAME
       targets: ["#{ cloudflare_tunnel_id() }#.cfargotunnel.com"]
